# Bootcamp

240047/turtle_sim/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
240047/turtle_sim/src/install/turtle_pub/lib/turtle_pub/: draw_circle_client  draw_circle_server
240047/turtle_sim/src/install/turtle_pub/share/turtle_pub/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
240047/turtle_sim/src/log/: latest_build
240047/turtle_sim/src/turtle_pub/: CMakeLists.txt  package.xml  setup.cfg  setup.py
240047/turtle_sim/src/turtle_pub/srv/: DrawCircle.srv
240047/turtle_sim/src/turtle_pub/turtle_pub/: draw_circle_server.py
240590/: Readme.md
240590/src/turtle_pub/: package.xml  setup.py
240590/src/turtle_pub/turtle_pub/: circle_server.py
240628/src/turtle_pub/: CMakeLists.txt  package.xml  setup.py
240628/src/turtle_pub/srv/: DrawCircle.srv
240628/src/turtle_pub/turtle_pub/: draw_circle_service.py  move_circle.py
240891/: readme.md
240891/src/turtle_pub/: package.xml  setup.py
240891/src/turtle_pub/turtle_pub/: client.py
