<package format="3">
  <name>turtle_pub</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="vivekananda@todo.todo">vivekananda</maintainer>
  <license>TODO: License declaration</license>

  <!-- runtime deps -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>

  <!-- srv/msg codegen deps -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- test deps -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
